--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
 <meta name="description" content="Jordan's page">
 <meta name="keywords" content="Jordan">
 
+<link href="styles/style.css" rel="stylesheet" />
+
 </head>
 
-<body>
-Website under construction...
+<body style="background-color: #e7dfd8;"></body>
+    <h1>Jordan Smith</h1>
+<p>Website under construction...</p>
 </body>
 </html>
 
