--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body style="background-color: #e7dfd8;"></body>
     <h1>Jordan Smith</h1>
-<p>Website under construction...</p>
+<p>Website currently under construction...</p>
 </body>
 </html>
 
