--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
+
 <!doctype html>
-<html>
-<head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Jordan Smith</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="styles/style.css" rel="stylesheet" />
+
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WZL237HF4S"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WZL237HF4S"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-    gtag('config', 'G-WZL237HF4S');
-    </script>
-
-<title>Jordan's Personal Page</title>
-
-<meta name="description" content="Jordan's page">
-<meta name="keywords" content="Jordan">
-
-<link href="styles/style.css" rel="stylesheet" />
+        gtag('config', 'G-WZL237HF4S');
+    </script>  
 
 </head>
 
-<body style="background-color: #e7dfd8;"></body>
+  <body>
     <h1>Jordan Smith</h1>
-<p>Website currently under construction...</p>
+    <p>Website currently under construction...</p>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
 
