--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
         <div class="left-container">
             <div class="content-container">
                 <h1 class="display-4">Jordan Smith</h1>
-                <p class="lead">AI Technical Product Manager based in London. </p>
+                <p class="lead">AI Technical Product Manager</p>
                 <hr class="my-4">
-                <p>I’m passionate about the use of cutting-edge tech for public good, and I get excited by building great solutions to interesting problems.</p>  
+                <p>I'm passionate about the use of cutting-edge tech for public good, and I get excited by building great solutions to interesting problems.</p> 
+                
+            </div>
+            <div class="bottom-container" style="padding-top: 0px; padding-bottom: 0px;">
+                <p>London, UK</p> 
             </div>
             <div class="bottom-container">
                 <a href="https://github.com/JordanJWSmith" target="_blank">
