center location when using mobile

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p>I'm passionate about the use of cutting-edge tech for public good, and I get excited by building great solutions to interesting problems.</p> 
                 
             </div>
-            <div class="bottom-container" style="padding-top: 0px; padding-bottom: 0px;">
+            <div id="location" class="bottom-container" style="padding-top: 0px; padding-bottom: 0px;">
                 <p>London, UK</p> 
             </div>
             <div class="bottom-container">
