change image, responsive font

--- a/index.html
+++ b/index.html
@@ -23,17 +23,19 @@
 </head>
 
   <body>
+
     <div class="jumbotron">
         <div class="left-container">
             <div class="content-container">
                 <h1 class="display-4">Jordan Smith</h1>
                 <p class="lead">AI Technical Product Manager</p>
                 <hr class="my-4">
-                <p>I'm passionate about the use of cutting-edge tech for public good, and I get excited by building great solutions to interesting problems.</p> 
-                
+                <p class="summary">I'm passionate about the use of cutting-edge tech for public good, and I get excited by building great solutions to interesting problems.</p> 
+                <br>
+                <p class="summary">I'm currently using AI to redefine NHS radiology workflows with Behold.ai.</p>
             </div>
             <div id="location" class="bottom-container" style="padding-top: 0px; padding-bottom: 0px;">
-                <p>London, UK</p> 
+                <p class="summary">London, UK</p> 
             </div>
             <div class="bottom-container">
                 <a href="https://github.com/JordanJWSmith" target="_blank">
@@ -52,7 +54,7 @@
         </div>
 
         <div class="right-container">
-            <img src="assets/images/DSC04425.jpg" alt="That's me">
+            <img src="assets/images/DSC04425_filter.png" alt="That's me">
         </div>
        
     </div>
