--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="jumbotron">
         <div class="left-container">
             <div class="content-container">
-                <h1 class="display-4">Jordan Smith</h1>
+                <h1 class="animate-charcter">Jordan Smith</h1>
                 <p class="lead">AI Technical Product Manager</p>
                 <hr class="my-4">
                 <p class="summary">I'm passionate about the use of cutting-edge tech for public good, and I get excited by building great solutions to interesting problems.</p> 
