--- a/index.html
+++ b/index.html
@@ -22,7 +22,23 @@
     </script>  
 </head>
 
-  <body>
+  <body class="landing">
+
+    <div class="nav">
+        <a href="/about.html">
+            <p>ABOUT ME</p>
+        </a>
+        <a href="/projects.html">
+            <p>PROJECTS</p>
+        </a>
+        <a href="/publications.html">
+            <p>PUBLICATIONS</p>
+        </a>
+        <a href="/influences.html">
+            <p>INFLUENCES</p>
+        </a>
+        
+    </div>
 
     <div class="jumbotron">
         <div class="left-container">
@@ -57,6 +73,10 @@
             <img src="assets/images/DSC04425_filter.png" alt="That's me">
         </div>
        
+    </div>
+
+    <div class="footer">
+        <p>Static site designed and built by Jordan Smith using plain old HTML and CSS</p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
