--- a/publications.html
+++ b/publications.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link href="styles/style.css" rel="stylesheet" />
+    <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WZL237HF4S"></script>
@@ -34,6 +35,9 @@
               </form> -->
         </nav>
         <h1 style="padding:20px">Publications</h1>
+        <br>
+        <br>
+        <p style="padding:20px">Coming soon...</p>
 
     <div class="footer">
         <p>Designed and built by Jordan Smith using plain old HTML and CSS</p>
