--- a/influences.html
+++ b/influences.html
@@ -24,7 +24,7 @@
 </head>
 
   <body>
-    <div>
+    <div style="height: 90vh">
         <nav style="padding:20px; background-color: #E7DFD8;" class="navbar navbar-light">
             <a class="navbar-brand" href="index.html">
                 <i class="bi bi-house-door-fill"width="30" height="30" alt=""></i> 
@@ -39,9 +39,10 @@
         <br>
         <p style="padding:20px">Coming soon...</p>
 
+    
+    </div>
     <div class="footer">
         <p>Designed and built by Jordan Smith using plain old HTML and CSS</p>
-    </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
