--- a/influences.html
+++ b/influences.html
@@ -24,16 +24,24 @@
 </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light" style="padding-left:20px; padding-right: 20px; background-color: #d0c9c2;">
+        <div class="uncollapsed-home" type="button"> 
+              <a class="nav-item nav-link" href="index.html"><i class="bi bi-house-door-fill" width="30" height="30" alt="home"></i></a>
+        </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link" href="/about.html">ABOUT ME</a>
+            <a class="nav-item nav-link" href="/about.html">PROJECTS</a>
+            <a class="nav-item nav-link" href="/publications.html">PUBLICATIONS</a>
+            <a class="nav-item nav-link active" href="#">INFLUENCES</a>
+          </div>
+    
+        </div> 
+    </nav>
     <div style="height: 90vh">
-        <nav style="padding:20px; background-color: #E7DFD8;" class="navbar navbar-light">
-            <a class="navbar-brand" href="index.html">
-                <i class="bi bi-house-door-fill"width="30" height="30" alt=""></i> 
-            </a>
-            <!-- <form class="form-inline">
-                <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Features</a>
-              </form> -->
-        </nav>
         <h1 style="padding:20px">Influences</h1>
         <br>
         <br>
