added hackathon link

--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
         &#128104;&#8205;&#127891; I hold an MSc in Computer Science from UCL and a BA in Music from Durham University. Outside of work I enjoy 
         <a style="color: black;" href="https://www.strava.com/athletes/32430899">fitness,</a> 
         <a style="color: black;" href="https://soundcloud.com/jordanjw-1">playing the sax</a> 
-        and the occasional hackathon. 
+        and the occasional <a style="color: black;" href="https://dancing-spiders-web.vercel.app/">hackathon</a>.
        </p>
        <br>
        <p class="lead">
