edit aboutme header

--- a/about.html
+++ b/about.html
@@ -127,7 +127,9 @@
     <div class="container">
       <h1 class="display-4">ABOUT ME</h1>
       <p class="copy-text">
-        &#128075; I like building things to solve important problems. My background is in HealthTech, information assurance and B2B sales. 
+        &#128075; I like building things to solve important problems. 
+        <!-- <br><br> 
+        &#128188; My background is in HealthTech, information security and B2B sales.  -->
         <br><br> 
         &#129659; I'm currently leading Product for <a href="https://behold.ai" target="_blank" style="color: black;">Behold.ai</a>, 
         where I develop tools to 
