--- a/projects.html
+++ b/projects.html
@@ -39,16 +39,135 @@
             <a class="nav-item nav-link" href="/influences.html">INFLUENCES</a>
           </div>
     
-        </div> 
+        </div>
     </nav>
-    <div style="height: 90vh">
-        <h1 style="padding:20px">Projects</h1>
-        <br>
-        <br>
-        <p style="padding:20px">Coming soon...</p>
+
+    <div class="jumbotron jumbotron-fluid with-gradient"> 
+        <div class="container">
+          <h1 class="display-4">PROJECTS</h1>
+          <p class="copy-text">
+            Here are some examples of projects and proofs-of-concept I've developed. 
+            <br><br> 
+            Most were built in my spare time out of a desire to create or learn something new. Others were built as part of my MSc CompSci or for a hackathon.
+            <!-- <br><br> -->
+           </p>
+           <p class="lead">
+            <!-- <a class="btn btn-primary btn-sm" href="https://github.com/JordanJWSmith" target="_blank" role="button"><i class="bi bi-github"></i></a> -->
+                <a style="font-size: 3rem; color: black;" href="https://github.com/JordanJWSmith" target="_blank">
+                    <i class="bi bi-github"></i>
+                </a>
+            </p>
+          <hr class="my-4">
+        </div>
+      </div>
+
+    <div class="container" style="padding:20px;">
+        <div class="row justify-content-center">
+
+        <!-- First Card -->
+        <div class="col-md-6 col-lg-3 mb-4">
+            <div class="card">
+            <img src="assets/images/ucl_compressed_2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title 1</h5>
+                <p class="card-text">Some quick example text for card 1.</p>
+                <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal1">Show Modal 1</button>
+            </div>
+            </div>
+        </div>
     
+        <!-- Second Card -->
+        <div class="col-md-6 col-lg-3 mb-4">
+            <div class="card">
+            <img src="assets/images/ucl_compressed_2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title 2</h5>
+                <p class="card-text">Some quick example text for card 2.</p>
+                <button class="btn btn-primary" data-toggle="modal" data-target="#modal2">Show Modal 2</button>
+            </div>
+            </div>
+        </div>
+
+        <!-- Third Card -->
+        <div class="col-md-6 col-lg-3 mb-4">
+            <div class="card">
+                <img src="assets/images/ucl_compressed_2.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                <h5 class="card-title">Card title 3</h5>
+                <p class="card-text">Some quick example text for card 2.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Fourth Card -->
+        <div class="col-md-6 col-lg-3 mb-4">
+            <div class="card">
+                <img src="assets/images/ucl_compressed_2.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                <h5 class="card-title">Card title 4</h5>
+                <p class="card-text">Some quick example text for card 2.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Fifth Card -->
+        <div class="col-md-6 col-lg-3 mb-4">
+            <div class="card">
+                <img src="assets/images/ucl_compressed_2.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                <h5 class="card-title">Card title 5</h5>
+                <p class="card-text">Some quick example text for card 2.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+
+        </div>
     </div>
-    <div class="footer">
+
+    <!-- Modals -->
+  <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="modal1Label" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modal1Label">Modal 1</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button> -->
+        </div>
+        <div class="modal-body">
+          Content for Modal 1 goes here.
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="modal2" tabindex="-1" role="dialog" aria-labelledby="modal2Label" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modal2Label">Modal 2</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          Content for Modal 2 goes here.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <div class="footer" style="position: relative;">
         <p>Designed and built by Jordan Smith using plain old HTML and CSS</p>
     </div>
 
