added notion pages and compiler script

--- a/test_output.html
+++ b/test_output.html
@@ -80,12 +80,12 @@
       <img alt="..." class="card-img-top" src="assets/images/ucl_compressed_2.jpg"/>
       <div class="card-body">
        <h5 class="card-title">
-        0
+        lyric vision
        </h5>
        <p class="card-text">
-        0
+        Info about lyric vision
        </p>
-       <button class="btn btn-primary" data-bs-target="#0" data-bs-toggle="modal">
+       <button class="btn btn-primary" data-bs-target="#lyric vision" data-bs-toggle="modal">
         More
        </button>
       </div>
@@ -96,12 +96,12 @@
       <img alt="..." class="card-img-top" src="assets/images/ucl_compressed_2.jpg"/>
       <div class="card-body">
        <h5 class="card-title">
-        1
+        Dancing Spider
        </h5>
        <p class="card-text">
-        1
+        Info about Dancing Spider
        </p>
-       <button class="btn btn-primary" data-bs-target="#1" data-bs-toggle="modal">
+       <button class="btn btn-primary" data-bs-target="#Dancing Spider" data-bs-toggle="modal">
         More
        </button>
       </div>
@@ -112,12 +112,12 @@
       <img alt="..." class="card-img-top" src="assets/images/ucl_compressed_2.jpg"/>
       <div class="card-body">
        <h5 class="card-title">
-        2
+        ImageFolder-relabel
        </h5>
        <p class="card-text">
-        2
+        Info about ImageFolder-relabel
        </p>
-       <button class="btn btn-primary" data-bs-target="#2" data-bs-toggle="modal">
+       <button class="btn btn-primary" data-bs-target="#ImageFolder-relabel" data-bs-toggle="modal">
         More
        </button>
       </div>
@@ -128,48 +128,105 @@
       <img alt="..." class="card-img-top" src="assets/images/ucl_compressed_2.jpg"/>
       <div class="card-body">
        <h5 class="card-title">
-        3
+        🎵 song-to-image
        </h5>
        <p class="card-text">
-        3
+        Info about 🎵 song-to-image
        </p>
-       <button class="btn btn-primary" data-bs-target="#3" data-bs-toggle="modal">
-        More
-       </button>
-      </div>
-     </div>
-    </div>
-    <div class="col-md-6 col-lg-3 mb-4">
-     <div class="card">
-      <img alt="..." class="card-img-top" src="assets/images/ucl_compressed_2.jpg"/>
-      <div class="card-body">
-       <h5 class="card-title">
-        4
-       </h5>
-       <p class="card-text">
-        4
-       </p>
-       <button class="btn btn-primary" data-bs-target="#4" data-bs-toggle="modal">
+       <button class="btn btn-primary" data-bs-target="#🎵 song-to-image" data-bs-toggle="modal">
         More
        </button>
       </div>
      </div>
     </div>
    </div>
-   <div id="modal=4">
-    Sample text for new-div-4 goes here.
+   <div id="modal=🎵 song-to-image">
+    <div aria-hidden="true" aria-labelledby="🎵 song-to-imageLabel" class="modal fade" id="🎵 song-to-image" role="dialog" tabindex="-1">
+     <div class="modal-dialog" role="document">
+      <div class="modal-content">
+       <div class="modal-header">
+        <h5 class="modal-title" id="🎵 song-to-imageLabel">
+         🎵 song-to-image
+        </h5>
+        <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
+        </button>
+       </div>
+       <div class="modal-body">
+        Content for 🎵 song-to-image goes here.
+       </div>
+       <div class="modal-footer">
+        <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
+        </button>
+       </div>
+      </div>
+     </div>
+    </div>
    </div>
-   <div id="modal=3">
-    Sample text for new-div-3 goes here.
+   <div id="modal=ImageFolder-relabel">
+    <div aria-hidden="true" aria-labelledby="ImageFolder-relabelLabel" class="modal fade" id="ImageFolder-relabel" role="dialog" tabindex="-1">
+     <div class="modal-dialog" role="document">
+      <div class="modal-content">
+       <div class="modal-header">
+        <h5 class="modal-title" id="ImageFolder-relabelLabel">
+         ImageFolder-relabel
+        </h5>
+        <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
+        </button>
+       </div>
+       <div class="modal-body">
+        Content for ImageFolder-relabel goes here.
+       </div>
+       <div class="modal-footer">
+        <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
+        </button>
+       </div>
+      </div>
+     </div>
+    </div>
    </div>
-   <div id="modal=2">
-    Sample text for new-div-2 goes here.
+   <div id="modal=Dancing Spider">
+    <div aria-hidden="true" aria-labelledby="Dancing SpiderLabel" class="modal fade" id="Dancing Spider" role="dialog" tabindex="-1">
+     <div class="modal-dialog" role="document">
+      <div class="modal-content">
+       <div class="modal-header">
+        <h5 class="modal-title" id="Dancing SpiderLabel">
+         Dancing Spider
+        </h5>
+        <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
+        </button>
+       </div>
+       <div class="modal-body">
+        Content for Dancing Spider goes here.
+       </div>
+       <div class="modal-footer">
+        <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
+        </button>
+       </div>
+      </div>
+     </div>
+    </div>
    </div>
-   <div id="modal=1">
-    Sample text for new-div-1 goes here.
-   </div>
-   <div id="modal=0">
-    Sample text for new-div-0 goes here.
+   <div id="modal=lyric vision">
+    <div aria-hidden="true" aria-labelledby="lyric visionLabel" class="modal fade" id="lyric vision" role="dialog" tabindex="-1">
+     <div class="modal-dialog" role="document">
+      <div class="modal-content">
+       <div class="modal-header">
+        <h5 class="modal-title" id="lyric visionLabel">
+         lyric vision
+        </h5>
+        <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
+        </button>
+       </div>
+       <div class="modal-body">
+        Content for lyric vision goes here.
+       </div>
+       <div class="modal-footer">
+        <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
+        </button>
+       </div>
+      </div>
+     </div>
+    </div>
    </div>
   </div>
   <div class="footer" style="position: relative;">
