--- a/test_output.html
+++ b/test_output.html
@@ -96,12 +96,12 @@
       <img alt="..." class="card-img-top" src="assets/images/ucl_compressed_2.jpg"/>
       <div class="card-body">
        <h5 class="card-title">
-        Dancing Spider
+        song-to-image
        </h5>
        <p class="card-text">
-        Info about Dancing Spider
+        Info about song-to-image
        </p>
-       <button class="btn btn-primary" data-bs-target="#Dancing Spider" data-bs-toggle="modal">
+       <button class="btn btn-primary" data-bs-target="#song-to-image" data-bs-toggle="modal">
         More
        </button>
       </div>
@@ -128,31 +128,31 @@
       <img alt="..." class="card-img-top" src="assets/images/ucl_compressed_2.jpg"/>
       <div class="card-body">
        <h5 class="card-title">
-        🎵 song-to-image
+        Dancing Spider
        </h5>
        <p class="card-text">
-        Info about 🎵 song-to-image
+        Info about Dancing Spider
        </p>
-       <button class="btn btn-primary" data-bs-target="#🎵 song-to-image" data-bs-toggle="modal">
+       <button class="btn btn-primary" data-bs-target="#Dancing Spider" data-bs-toggle="modal">
         More
        </button>
       </div>
      </div>
     </div>
    </div>
-   <div id="modal=🎵 song-to-image">
-    <div aria-hidden="true" aria-labelledby="🎵 song-to-imageLabel" class="modal fade" id="🎵 song-to-image" role="dialog" tabindex="-1">
+   <div id="modal=Dancing Spider">
+    <div aria-hidden="true" aria-labelledby="Dancing SpiderLabel" class="modal fade" id="Dancing Spider" role="dialog" tabindex="-1">
      <div class="modal-dialog" role="document">
       <div class="modal-content">
        <div class="modal-header">
-        <h5 class="modal-title" id="🎵 song-to-imageLabel">
-         🎵 song-to-image
+        <h5 class="modal-title" id="Dancing SpiderLabel">
+         Dancing Spider
         </h5>
         <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
         </button>
        </div>
        <div class="modal-body">
-        Content for 🎵 song-to-image goes here.
+        Content for Dancing Spider goes here.
        </div>
        <div class="modal-footer">
         <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
@@ -184,19 +184,19 @@
      </div>
     </div>
    </div>
-   <div id="modal=Dancing Spider">
-    <div aria-hidden="true" aria-labelledby="Dancing SpiderLabel" class="modal fade" id="Dancing Spider" role="dialog" tabindex="-1">
+   <div id="modal=song-to-image">
+    <div aria-hidden="true" aria-labelledby="song-to-imageLabel" class="modal fade" id="song-to-image" role="dialog" tabindex="-1">
      <div class="modal-dialog" role="document">
       <div class="modal-content">
        <div class="modal-header">
-        <h5 class="modal-title" id="Dancing SpiderLabel">
-         Dancing Spider
+        <h5 class="modal-title" id="song-to-imageLabel">
+         song-to-image
         </h5>
         <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
         </button>
        </div>
        <div class="modal-body">
-        Content for Dancing Spider goes here.
+        Content for song-to-image goes here.
        </div>
        <div class="modal-footer">
         <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
