fixed image naming convention upon notion import

--- a/test_output.html
+++ b/test_output.html
@@ -96,12 +96,12 @@
       <img alt="..." class="card-img-top" src="assets/images/ucl_compressed_2.jpg"/>
       <div class="card-body">
        <h5 class="card-title">
-        song-to-image
+        🎵 song-to-image
        </h5>
        <p class="card-text">
-        Info about song-to-image
+        Info about 🎵 song-to-image
        </p>
-       <button class="btn btn-primary" data-bs-target="#song-to-image" data-bs-toggle="modal">
+       <button class="btn btn-primary" data-bs-target="#🎵-song-to-image" data-bs-toggle="modal">
         More
        </button>
       </div>
@@ -439,12 +439,12 @@
      </div>
     </div>
    </div>
-   <div aria-hidden="true" aria-labelledby="song-to-imageLabel" class="modal fade" id="song-to-image" role="dialog" tabindex="-1">
+   <div aria-hidden="true" aria-labelledby="🎵-song-to-imageLabel" class="modal fade" id="🎵-song-to-image" role="dialog" tabindex="-1">
     <div class="modal-dialog" role="document">
      <div class="modal-content">
       <div class="modal-header">
-       <h5 class="modal-title" id="song-to-imageLabel">
-        song-to-image
+       <h5 class="modal-title" id="🎵-song-to-imageLabel">
+        🎵 song-to-image
        </h5>
        <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
        </button>
@@ -542,8 +542,8 @@
           of examples.
          </p>
          <figure class="image" id="c54e7665-8ce8-4ed5-9cce-864c45e7ee1b">
-          <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled.png">
-           <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled.png" style="width:957px"/>
+          <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled.png">
+           <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled.png" style="width:957px"/>
           </a>
          </figure>
          <p class="" id="1f6e24dc-1875-48e1-899f-9c934b48ea44">
@@ -559,8 +559,8 @@
          <div class="column-list" id="51d59057-d075-4db7-bf00-96be06147c39">
           <div class="column" id="2ebf6448-a7ec-4643-a680-5d3a220bfd0f" style="width:50%">
            <figure class="image" id="5bbc9487-85b6-440c-acd2-e89b864bb725">
-            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%201.png">
-             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%201.png" style="width:612px"/>
+            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%201.png">
+             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%201.png" style="width:612px"/>
             </a>
             <figcaption>
              Teenage Dirtbag by Wheatus:
@@ -572,8 +572,8 @@
           </div>
           <div class="column" id="ef7894b9-d0db-4d45-8d67-5ca42413c98f" style="width:50%">
            <figure class="image" id="d60f6ea4-85ac-467b-8961-c26ae3fbc318">
-            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%202.png">
-             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%202.png" style="width:612px"/>
+            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%202.png">
+             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%202.png" style="width:612px"/>
             </a>
             <figcaption>
              Teenage Dirtbag by Wheatus:
@@ -590,8 +590,8 @@
          <p class="" id="7e340ca9-f362-4dcd-aca9-35861b2da2cf">
          </p>
          <figure class="image" id="82470b00-b1e5-44fa-bf0b-e104fc3b9c1c">
-          <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%203.png">
-           <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%203.png" style="width:581px"/>
+          <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%203.png">
+           <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%203.png" style="width:581px"/>
           </a>
          </figure>
          <p class="" id="7d7c05d0-6f1c-4ad4-9c57-f05298549952">
@@ -645,8 +645,8 @@
          <div class="column-list" id="73a6d5ed-ada3-4938-9d6f-8643ffc35ffb">
           <div class="column" id="3c334516-3bf6-4126-9646-57896f07934a" style="width:50%">
            <figure class="image" id="c3e7c4dd-dfce-4628-a12b-88fde5713eaa">
-            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%204.png">
-             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%204.png" style="width:996px"/>
+            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%204.png">
+             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%204.png" style="width:996px"/>
             </a>
             <figcaption>
              Too much emphasis on the song title,
@@ -664,8 +664,8 @@
           </div>
           <div class="column" id="c6e4c066-927a-40ef-8145-1af674f2b8ea" style="width:50%">
            <figure class="image" id="083761be-63c6-4754-aadb-1e17a9345a5a">
-            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%205.png">
-             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%205.png" style="width:996px"/>
+            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%205.png">
+             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%205.png" style="width:996px"/>
             </a>
             <figcaption>
              More ethereal and beautiful, more suited to the lyric
@@ -926,8 +926,8 @@
          <div class="column-list" id="51d459c0-d6bd-4717-86db-4c74af073308">
           <div class="column" id="88668f38-d22b-4af3-9e9b-b213ec08cbfd" style="width:50%">
            <figure class="image" id="c311e247-c37e-49bb-8b14-e573408dfb64">
-            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%206.png">
-             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%206.png" style="width:996px"/>
+            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%206.png">
+             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%206.png" style="width:996px"/>
             </a>
             <figcaption>
              Bohemian Rhapsody - Queen
@@ -936,8 +936,8 @@
           </div>
           <div class="column" id="a6871147-c3bb-4fbe-92c7-f94b8d6b1480" style="width:50%">
            <figure class="image" id="2aba2266-f3ee-4ac7-a906-d09db0d881c2">
-            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%207.png">
-             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%207.png" style="width:612px"/>
+            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%207.png">
+             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%207.png" style="width:612px"/>
             </a>
             <figcaption>
              Fields of Gold - Sting
@@ -948,8 +948,8 @@
          <div class="column-list" id="e7c963ea-3d8d-46d7-9814-c08bce343009">
           <div class="column" id="ef1d218a-34bf-4673-93fa-7256d38d4d47" style="width:50%">
            <figure class="image" id="c142db17-e0ab-4ea9-9e98-00a89c29ce7e">
-            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%208.png">
-             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%208.png" style="width:920px"/>
+            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%208.png">
+             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%208.png" style="width:920px"/>
             </a>
             <figcaption>
              Grand Theft Autumn - Fall Out Boy
@@ -958,8 +958,8 @@
           </div>
           <div class="column" id="b67fff59-d53c-41f7-97a0-7eee71146669" style="width:50%">
            <figure class="image" id="5329520c-c87b-4514-9c8b-fa9d43909e66">
-            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%209.png">
-             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%209.png" style="width:996px"/>
+            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%209.png">
+             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%209.png" style="width:996px"/>
             </a>
             <figcaption>
              Hello Florence, How Are You? - Florence Arman
@@ -970,8 +970,8 @@
          <div class="column-list" id="513ae4b7-142f-4a83-8663-248909f4c39f">
           <div class="column" id="611ad865-7ecc-42c4-8994-a537618dc647" style="width:50%">
            <figure class="image" id="224664a7-06f4-4f34-8783-eb5238c4b8b2">
-            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2010.png">
-             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2010.png" style="width:920px"/>
+            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2010.png">
+             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2010.png" style="width:920px"/>
             </a>
             <figcaption>
              Man in Room 39 - Arcadian Wild
@@ -980,8 +980,8 @@
           </div>
           <div class="column" id="b3ccab12-3fe7-42a8-8639-46b45925a0d0" style="width:50%">
            <figure class="image" id="399a39e7-2b23-4536-bad7-ebee47cc927a">
-            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2011.png">
-             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2011.png" style="width:996px"/>
+            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2011.png">
+             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2011.png" style="width:996px"/>
             </a>
             <figcaption>
              October Sky - Yebba
@@ -992,8 +992,8 @@
          <div class="column-list" id="47a55174-412a-40ca-81c7-345d753ca6a7">
           <div class="column" id="568a9144-f8bc-4928-907e-c43338de1c41" style="width:50%">
            <figure class="image" id="0715b450-acbb-4b60-971f-c098ee28ecca">
-            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2012.png">
-             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2012.png" style="width:612px"/>
+            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2012.png">
+             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2012.png" style="width:612px"/>
             </a>
             <figcaption>
              One Kiss - Dua Lipa
@@ -1002,8 +1002,8 @@
           </div>
           <div class="column" id="b94da455-d38d-4270-aaec-6509cb051430" style="width:50%">
            <figure class="image" id="43ae2118-e270-41a1-9c54-a90b582bc398">
-            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2013.png">
-             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2013.png" style="width:920px"/>
+            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2013.png">
+             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2013.png" style="width:920px"/>
             </a>
             <figcaption>
              Queen Mab - Becca Stevens
@@ -1014,8 +1014,8 @@
          <div class="column-list" id="9ff54724-36ba-4e78-a54b-d6bfb47fed27">
           <div class="column" id="fe7548e6-7f7a-455c-bdee-04f549c48581" style="width:50%">
            <figure class="image" id="3df50666-3ed1-4b69-b7ec-5aa804f453f6">
-            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2014.png">
-             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2014.png" style="width:920px"/>
+            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2014.png">
+             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2014.png" style="width:920px"/>
             </a>
             <figcaption>
              She - Dodie
@@ -1024,8 +1024,8 @@
           </div>
           <div class="column" id="d3d7718e-ebc1-44c1-baa2-19fcd4b78933" style="width:50%">
            <figure class="image" id="60b4088f-63bf-4fc6-aa97-224c89ff5ee0">
-            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2015.png">
-             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2015.png" style="width:612px"/>
+            <a href="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2015.png">
+             <img src="projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/%F0%9F%8E%B5%20song-to-image%20b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled%2015.png" style="width:612px"/>
             </a>
             <figcaption>
              Slack Jaw - Sylvan Esso
