--- a/projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/🎵 song-to-image b0ebe61c752b4a17990c48c6b3a0bdd3.html
+++ b/projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/🎵 song-to-image b0ebe61c752b4a17990c48c6b3a0bdd3.html
@@ -1,4 +1,4 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>song-to-image</title><style>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>🎵 song-to-image</title><style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
 html {
