Revert "compress images"
This reverts commit 3e15edd01619cf0c60e30018a5d0704667cfd6d3.

--- a/test_output.html
+++ b/test_output.html
@@ -128,10 +128,10 @@
       <img alt="..." class="card-img-top" src="assets/images/ucl_compressed_2.jpg"/>
       <div class="card-body">
        <h5 class="card-title">
-        Dancing Spider
+        🎵 song-to-image
        </h5>
        <p class="card-text">
-        Info about Dancing Spider
+        Info about 🎵 song-to-image
        </p>
        <button class="btn btn-primary" data-bs-target="#dancing-spider" data-bs-toggle="modal">
         More
