fixed project image styling

--- a/test_output.html
+++ b/test_output.html
@@ -140,7 +140,7 @@
      </div>
     </div>
    </div>
-   <div aria-hidden="true" aria-labelledby="dancing-spiderLabel" class="modal fade" id="dancing-spider" role="dialog" tabindex="-1">
+   <div aria-hidden="true" aria-labelledby="dancing-spiderLabel" class="modal fade modal-lg" id="dancing-spider" role="dialog" tabindex="-1">
     <div class="modal-dialog" role="document">
      <div class="modal-content">
       <div class="modal-header">
@@ -300,7 +300,7 @@
      </div>
     </div>
    </div>
-   <div aria-hidden="true" aria-labelledby="imagefolder-relabelLabel" class="modal fade" id="imagefolder-relabel" role="dialog" tabindex="-1">
+   <div aria-hidden="true" aria-labelledby="imagefolder-relabelLabel" class="modal fade modal-lg" id="imagefolder-relabel" role="dialog" tabindex="-1">
     <div class="modal-dialog" role="document">
      <div class="modal-content">
       <div class="modal-header">
@@ -439,7 +439,7 @@
      </div>
     </div>
    </div>
-   <div aria-hidden="true" aria-labelledby="🎵-song-to-imageLabel" class="modal fade" id="🎵-song-to-image" role="dialog" tabindex="-1">
+   <div aria-hidden="true" aria-labelledby="🎵-song-to-imageLabel" class="modal fade modal-lg" id="🎵-song-to-image" role="dialog" tabindex="-1">
     <div class="modal-dialog" role="document">
      <div class="modal-content">
       <div class="modal-header">
@@ -1045,7 +1045,7 @@
      </div>
     </div>
    </div>
-   <div aria-hidden="true" aria-labelledby="lyric-visionLabel" class="modal fade" id="lyric-vision" role="dialog" tabindex="-1">
+   <div aria-hidden="true" aria-labelledby="lyric-visionLabel" class="modal fade modal-lg" id="lyric-vision" role="dialog" tabindex="-1">
     <div class="modal-dialog" role="document">
      <div class="modal-content">
       <div class="modal-header">
