added card images

--- a/test_output.html
+++ b/test_output.html
@@ -77,7 +77,7 @@
    <div class="row justify-content-center" id="project_card_container">
     <div class="col-md-6 col-lg-3 mb-4">
      <div class="card">
-      <img alt="..." class="card-img-top" src="assets/images/ucl_compressed_2.jpg"/>
+      <img alt="..." class="card-img-top" src="./projects/8600fb50-8c9c-42e2-a391-48d560ee60d7/lyric_vision_abe15f9f3c664c609caab5584ba02e95/Untitled.png"/>
       <div class="card-body">
        <h5 class="card-title">
         lyric vision
@@ -93,7 +93,7 @@
     </div>
     <div class="col-md-6 col-lg-3 mb-4">
      <div class="card">
-      <img alt="..." class="card-img-top" src="assets/images/ucl_compressed_2.jpg"/>
+      <img alt="..." class="card-img-top" src="./projects/a10afcf2-a217-43f1-8d2f-0430f578e23c_Export-b861e1b0-0fa3-457b-bcc6-231ec8dd4601/🎵_song-to-image_b0ebe61c752b4a17990c48c6b3a0bdd3/Untitled.png"/>
       <div class="card-body">
        <h5 class="card-title">
         🎵 song-to-image
@@ -109,7 +109,7 @@
     </div>
     <div class="col-md-6 col-lg-3 mb-4">
      <div class="card">
-      <img alt="..." class="card-img-top" src="assets/images/ucl_compressed_2.jpg"/>
+      <img alt="..." class="card-img-top" src="./projects/dfc0cbc4-aa01-417b-9691-e4f5fdcf19fc/ImageFolder-relabel_e09f1f2b15e54fa3a769b5304eabe465/Untitled.png"/>
       <div class="card-body">
        <h5 class="card-title">
         ImageFolder-relabel
@@ -125,7 +125,7 @@
     </div>
     <div class="col-md-6 col-lg-3 mb-4">
      <div class="card">
-      <img alt="..." class="card-img-top" src="assets/images/ucl_compressed_2.jpg"/>
+      <img alt="..." class="card-img-top" src="./projects/5f1b773b-2dff-4dd4-a203-715739f9befb/Dancing_Spider_72c42e5df4ba4858ae33287f69456bba/Untitled.png"/>
       <div class="card-body">
        <h5 class="card-title">
         Dancing Spider
